--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -10,6 +10,10 @@
 	text-align: right;
 }
 
+.u-margin-bottom-regular {
+	margin-bottom: 5rem;
+}
+
 .u-margin-bottom-big {
 	margin-bottom: 8rem;
 }
