--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -50,7 +50,7 @@
 	</div>
 
 	<div class="functionalities">
-		<div class="explanation-card">
+		<div class="explanation-card u-margin-bottom-big">
 			<app-background-dex-style
 				[num]="1"
 				[text]="'Search your Pokemon'"
@@ -67,7 +67,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="explanation-card">
+		<div class="explanation-card u-margin-bottom-big">
 			<app-background-dex-style
 				[num]="2"
 				[text]="'Analyze your selected Pokemon'"
@@ -93,7 +93,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="explanation-card">
+		<div class="explanation-card u-margin-bottom-big">
 			<app-background-dex-style
 				[num]="3"
 				[text]="'And catch&#8217;em all!'"
@@ -103,13 +103,11 @@
 				src="assets/img/functionality-3.jpg"
 				alt=""
 			/>
-			<div class="explanation-card__info ">
-				<div class="explanation-card__info ">
-					<div class="bubble-text">
-						Just point the cursor on the card and you will see all
-						the data available: Name, ability, height, weight, types
-						and stats!
-					</div>
+			<div class="explanation-card__info">
+				<div class="bubble-text">
+					Just point the cursor on the card and you will see all the
+					data available: Name, ability, height, weight, types and
+					stats!
 				</div>
 			</div>
 		</div>
