Refactor responsive in pokedex component

--- a/src/app/components/pokedex/pokedex.component.scss
+++ b/src/app/components/pokedex/pokedex.component.scss
@@ -42,7 +42,8 @@
 	.pokedex {
 		flex-direction: column;
 
-		&__pokemon-list {
+		&__pokemon-list,
+		&__pokemon-detail {
 			width: 100%;
 		}
 	}
