Pokedex refactor completed

--- a/src/app/components/pokedex/pokedex.component.html
+++ b/src/app/components/pokedex/pokedex.component.html
@@ -9,6 +9,7 @@
 		<img
 			class="loading-picture__request"
 			src="assets/img/loading-pokeball.gif"
+			alt="Loading"
 		/>
 	</div>
 	<div class="loading-picture" *ngIf="status === 'error'">
