--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $terciary-color: #e0e0e0;
 $menu-item-color-hoover: #b53e3e;
 
 $color-white: #ffffff;
-$color-black: #ffffff;
+$color-black: #000;
 $secundary-text-color: #494949;
 
 // Sizes
