--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,10 +4,9 @@ html {
 }
 
 body {
-	background-color: #e9e9e9;
-	color: red;
 	height: 100vh;
 	width: 100vw;
+	background-color: transparent;
 	box-sizing: border-box;
 }
 
