--- a/src/app/components/pokedex/pokedex.component.scss
+++ b/src/app/components/pokedex/pokedex.component.scss
@@ -11,7 +11,6 @@
 .pokedex {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
 	flex-wrap: wrap;
 	width: 100%;
 
@@ -21,6 +20,7 @@
 
 	&__pokemon-detail {
 		flex-grow: 6;
+		align-self: center;
 	}
 }
 
