Add new style to cards on functionality section

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -55,11 +55,9 @@
 				[num]="1"
 				[text]="'Search your Pokemon'"
 			></app-background-dex-style>
-			<img
-				class="explanation-card__img"
-				src="assets/img/functionality-1.jpg"
-				alt=""
-			/>
+			<div class="explanation-card__img">
+				<img src="assets/img/functionality-1.jpg" alt="" />
+			</div>
 			<div class="explanation-card__info ">
 				<div class="bubble-text">
 					You can select the first 151 Pokemons and search them by
@@ -73,17 +71,9 @@
 				[text]="'Analyze your selected Pokemon'"
 			></app-background-dex-style>
 
-			<div class="explanation-card__img-group">
-				<img
-					class="explanation-card__img"
-					src="assets/img/functionality-2_1.jpg"
-					alt=""
-				/>
-				<img
-					class="explanation-card__img"
-					src="assets/img/functionality-2_2.jpg"
-					alt=""
-				/>
+			<div class="explanation-card__img">
+				<img src="assets/img/functionality-2_1.jpg" alt="" />
+				<img src="assets/img/functionality-2_2.jpg" alt="" />
 			</div>
 			<div class="explanation-card__info ">
 				<div class="bubble-text">
@@ -98,16 +88,13 @@
 				[num]="3"
 				[text]="'And catch&#8217;em all!'"
 			></app-background-dex-style>
-			<img
-				class="explanation-card__img"
-				src="assets/img/functionality-3.jpg"
-				alt=""
-			/>
+			<div class="explanation-card__img">
+				<img src="assets/img/functionality-3.jpg" alt="" />
+			</div>
 			<div class="explanation-card__info">
 				<div class="bubble-text">
-					Just point the cursor on the card and you will see all the
-					data available: Name, ability, height, weight, types and
-					stats!
+					Explore the world around you and catch all the Pokemon
+					availables!
 				</div>
 			</div>
 		</div>
