--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -57,6 +57,7 @@
 	box-sizing: border-box;
 	padding: 5rem 0rem;
 	height: 100vh;
+
 	@include background-parallax(
 		'https://playagaingames.files.wordpress.com/2019/01/pokemon-lets-go-3.jpg',
 		$color-white,
@@ -71,27 +72,31 @@
 		.explanation-card {
 			display: flex;
 			flex-flow: column nowrap;
-			align-items: center;
+			align-items: stretch;
 			justify-content: space-between;
-			height: 60rem;
+			height: 54rem;
+			max-width: 41rem;
+			background-color: #f0f0f0;
+			box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+			padding: 4rem;
+			border-radius: 15px;
 
-			&__img-group {
+			&__img {
 				display: flex;
-				flex-flow: row nowrap;
-
+				flex-flow: row wrap;
+				justify-content: space-evenly;
+				align-self: center;
 				img {
+					border-radius: 15px;
 					max-height: 30rem;
 				}
 			}
 
-			&__img {
-				max-height: 30rem;
-				border-radius: 15px;
-			}
-
-			&__info {
-				max-width: 30rem;
-			}
+			// &__img {
+			// 	max-height: 30rem;
+			//     border-radius: 15px;
+			//     align-self: center;
+			// }
 		}
 	}
 
