Pokedex-list refactor completed

--- a/src/app/components/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokedex/pokemon-list/pokemon-list.component.html
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="component-box">
 	<div class="title">
 		<img
 			class="title__logo"
@@ -32,11 +32,11 @@
 				<span class="elem__id">{{ elem.id }}</span>
 				<div class="elem__info">
 					<img
-						class="elem__img"
+						class="elem__info__img"
 						src="{{ elem.imagePath }}"
 						alt="pokemon-img"
 					/>
-					<p class="elem__name">{{ elem.name }}</p>
+					<p class="elem__info__name">{{ elem.name }}</p>
 				</div>
 			</div>
 		</div>
