--- a/src/app/components/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokedex/pokemon-list/pokemon-list.component.scss
@@ -1,11 +1,13 @@
 @import 'base/base';
 @import 'abstracts/variables';
 
-.container {
+.component-box {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 2rem;
+	// margin: 0 auto;
+	// width: 40rem;
 }
 
 .title {
@@ -14,24 +16,22 @@
 	align-items: center;
 	background-color: $secondary-color;
 	border-radius: 20px;
-	padding: 5px 0 5px 5px;
-	margin: 0 0 10px 0px;
-	font-size: 7rem;
-	font-weight: 700;
+	padding: 0.5rem 0 0.5rem 0.5rem;
+	margin: 0 0 1rem 0;
 
 	&__logo {
 		height: 40px;
-		margin: 5px;
+		margin: 1rem;
 	}
 
 	&__text {
-		font-size: 1.5rem;
+		font-size: 3rem;
 		font-family: 'Roboto Condensed';
 		color: white;
-		margin-left: 20px;
+		margin-left: 2rem;
 		text-transform: uppercase;
 		&::first-letter {
-			font-size: 2rem;
+			font-size: 3.5rem;
 		}
 	}
 }
@@ -42,31 +42,31 @@
 	justify-content: space-between;
 	background-color: #f0f0f0;
 	border-radius: 20px 20px 60px 20px;
-	padding: 25px;
+	padding: 2.5rem;
 }
 
 .search-bar {
 	display: flex;
 	align-items: center;
-	position: sticky;
 	height: 35px;
 	border: 1px solid rgb(207, 205, 205);
 	background-color: white;
 	border-radius: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 1rem;
+	// width: 25em;
 
 	&__img {
 		width: 20px;
 		height: 20px;
-		margin-left: 10px;
+		margin-left: 1rem;
 	}
 
 	&__input {
 		border: none;
 		outline: none;
-		width: 80%;
-		margin-left: 20px;
-		font-size: 1.1rem;
+		width: 100%;
+		margin-left: 2rem;
+		font-size: 1.5rem;
 	}
 }
 
@@ -102,9 +102,8 @@
 
 .elem {
 	display: flex;
-	flex-direction: row;
-	padding-right: 6px;
-	margin: 10px 0;
+	padding-right: 0.6rem;
+	margin: 1rem 0;
 	height: 60px;
 	color: white;
 	cursor: pointer;
@@ -116,7 +115,7 @@
 		background-color: $secondary-color;
 		width: 15%;
 		font-weight: bold;
-		font-size: 1.2rem;
+		font-size: 1.6rem;
 		border-top-left-radius: 30px;
 		border-bottom-left-radius: 10px;
 		padding: 5px;
@@ -133,29 +132,29 @@
 		background-color: $primary-color;
 		border-top-right-radius: 10px;
 		border-bottom-right-radius: 30px;
-	}
 
-	&__img {
-		background-color: $terciary-color;
-		height: 80%;
-		margin: 10px;
-		border-radius: 10px;
-		width: auto;
-	}
+		&__img {
+			background-color: $terciary-color;
+			height: 80%;
+			margin: 10px;
+			border-radius: 10px;
+			width: auto;
+		}
 
-	&__name {
-		text-transform: uppercase;
-		padding-left: 20px;
-		font-weight: 700;
-		font-size: 1.1rem;
-		&::first-letter {
+		&__name {
+			text-transform: uppercase;
+			padding-left: 20px;
+			font-weight: 700;
 			font-size: 1.5rem;
+			&::first-letter {
+				font-size: 1.6rem;
+			}
 		}
 	}
 }
 
 @media (max-width: 480px) {
-	.container {
+	.component-box {
 		padding-left: 0.5rem;
 		padding-right: 0.5rem;
 	}
@@ -167,7 +166,7 @@
 }
 
 @media (min-width: 1280px) {
-	.container {
+	.component-box {
 		padding: 6rem;
 	}
 }
