--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -30,9 +30,11 @@
 	</div>
 </main>
 
+<!-- SECOND SECTION -->
+
 <section class="section-functionality" id="section-2">
 	<svg
-		class="section-functionality__wave"
+		class="section-functionality__wave section-functionality__wave--top"
 		viewBox="0 0 1599 126"
 		fill="none"
 		xmlns="http://www.w3.org/2000/svg"
@@ -49,7 +51,7 @@
 		</h2>
 	</div>
 
-	<div class="functionalities">
+	<div class="functionalities u-margin-top-large">
 		<div class="explanation-card u-margin-bottom-big">
 			<app-background-dex-style
 				[num]="1"
@@ -101,18 +103,27 @@
 	</div>
 </section>
 
-<section class="main-bottom" id="section-3">
-	<svg
-		class="main-bottom__wave"
-		viewBox="0 0 1599 126"
-		xmlns="http://www.w3.org/2000/svg"
-	>
-		<path
-			d="M0 100.937V0H1599V75.5C1151.5 134.5 736.806 144.614 312.5 86C149.091 63.4266 25.7633 73.8967 0 100.937Z"
-			fill="#273036"
-		/>
-	</svg>
-	<h2 class="title">our team</h2>
+<!-- THIRD SECTION -->
+
+<section class="section-team" id="section-3">
+	<div class="section-team__heading">
+		<svg
+			class="wave wave--top"
+			viewBox="0 0 1599 126"
+			xmlns="http://www.w3.org/2000/svg"
+		>
+			<path
+				d="M0 100.937V0H1599V75.5C1151.5 134.5 736.806 144.614 312.5 86C149.091 63.4266 25.7633 73.8967 0 100.937Z"
+				fill="#273036"
+			/>
+		</svg>
+		<div class="u-text-center u-absolute-position-center">
+			<h2 class="heading-secondary">
+				The Pokedex
+			</h2>
+		</div>
+	</div>
+
 	<div class="info">
 		<div class="card" *ngFor="let person of team">
 			<div class="card__container">
@@ -127,7 +138,7 @@
 			</div>
 		</div>
 	</div>
-	<p class="main-bottom__rights">
+	<p class="section-team__rights">
 		This is a not-for-profit project. None of the images used in this
 		projects below us. All rights are reserved to The Pokemon Company
 	</p>
