--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -18,6 +18,21 @@
 	margin-bottom: 8rem;
 }
 
+.u-margin-top-large {
+	margin-top: 15rem;
+}
+
+.u-margin-top-regular {
+	margin-top: 5rem;
+}
+
+.u-absolute-position-center {
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+}
+
 @media (max-width: 1366px) {
 	.u-margin-bottom-big {
 		margin-bottom: 4rem;
