Add header curve creation

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -33,25 +33,10 @@
 <!-- SECOND SECTION -->
 
 <section class="section-functionality" id="section-2">
-	<svg
-		class="section-functionality__wave section-functionality__wave--top"
-		viewBox="0 0 1599 126"
-		fill="none"
-		xmlns="http://www.w3.org/2000/svg"
-	>
-		<path
-			d="M0 100.937V0H1599V75.5C1151.5 134.5 736.806 144.614 312.5 86C149.091 63.4266 25.7633 73.8967 0 100.937Z"
-			fill="#273036"
-		/>
-	</svg>
-
-	<div class="u-text-center u-margin-bottom-big">
-		<h2 class="heading-secondary">
-			The Pokedex
-		</h2>
+	<div class="section-functionality__heading">
+		<app-header-curve [text]="'Our Team'"></app-header-curve>
 	</div>
-
-	<div class="functionalities u-margin-top-large">
+	<div class="functionalities u-margin-top-regular">
 		<div class="explanation-card u-margin-bottom-big">
 			<app-background-dex-style
 				[num]="1"
@@ -107,21 +92,7 @@
 
 <section class="section-team" id="section-3">
 	<div class="section-team__heading">
-		<svg
-			class="wave wave--top"
-			viewBox="0 0 1599 126"
-			xmlns="http://www.w3.org/2000/svg"
-		>
-			<path
-				d="M0 100.937V0H1599V75.5C1151.5 134.5 736.806 144.614 312.5 86C149.091 63.4266 25.7633 73.8967 0 100.937Z"
-				fill="#273036"
-			/>
-		</svg>
-		<div class="u-text-center u-absolute-position-center">
-			<h2 class="heading-secondary">
-				The Pokedex
-			</h2>
-		</div>
+		<app-header-curve [text]="'Our Team'"></app-header-curve>
 	</div>
 
 	<div class="info">
