--- a/src/app/components/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
@@ -1,20 +1,9 @@
-<div class="card">
-	<div class="card card__inner">
-		<!-- CARD FRONT -->
-		<div class="card card__front">
-			<div class="card__front--data-bg">
-				<!-- Card Title -->
-				<h2 class="btn btn--first">
-					<img
-						class="icon-img"
-						src="./../../../../assets/img/iconPointerMap.svg"
-						alt="Icon Pointer Map"
-					/>LOCATION
-				</h2>
-				<!-- Background Color -->
-				<div id="map" class="map"></div>
-			</div>
-		</div>
+<div class="map-container">
+	<div class="map-container__title">
+		<img src="/assets/img/iconPointerMap.png" alt="Icon Map" />
+		<h2>
+			Location
+		</h2>
 	</div>
+	<div id="map" class="map-container__map"></div>
 </div>
-<!-- <button (click)="changePokemon()">Cambia pokemon</button> -->
