--- a/src/app/components/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.scss
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.scss
@@ -1,48 +1,36 @@
+.map-container {
+	display: flex;
+	flex-direction: column;
+	background-color: #555555;
+	border-radius: 2rem;
+
+	&__title {
+		display: flex;
+		align-items: center;
+		padding: 0.5rem;
+		background-color: #ececec;
+		border-radius: 1rem;
+		margin: 1rem;
+		color: black;
+
+		img {
+			height: 32px;
+		}
+
+		h2 {
+			padding-left: 1rem;
+			font-weight: bolder;
+			font-size: 1.5rem;
+			text-transform: uppercase;
+		}
+	}
+
+	&__map {
+		min-height: 300px;
+		border-radius: 2rem;
+	}
+}
+
 .leaflet-popup-content-wrapper .leaflet-popup-content {
 	color: red;
-}
-
-// Shadows boxing
-
-.card {
-	width: 100%;
-	height: 100%;
-
-	&__front--bg {
-		height: calc(100% - 4rem);
-		border-radius: 2rem;
-	}
-
-	&__front--data-bg {
-		height: calc(100% - 1rem);
-		border-radius: 2rem;
-		padding: 1rem 0 0 0;
-		background-color: #555555;
-	}
-}
-
-.map {
-	min-height: 300px;
-	border-radius: 2rem;
-	height: 47vh;
-}
-
-.icon-img {
-	width: 32px;
-	height: 32px;
-}
-
-.btn {
-	display: flex;
-	margin: 1rem 0;
-	align-items: center;
-	background-color: #ececec;
-	font-weight: bolder;
-	font-size: 1.5rem;
-	padding: 0.5rem;
-	border-radius: 1rem;
-
-	&--first {
-		margin: 0 1rem 1rem 1rem;
-	}
 }
