--- a/src/app/components/pokedex/pokedex.component.scss
+++ b/src/app/components/pokedex/pokedex.component.scss
@@ -6,6 +6,7 @@
 	justify-content: center;
 	align-items: center;
 	min-height: calc(100vh - 100px);
+	// background: linear-gradient(rgba(255, 255, 255, 0.801), rgba(255, 255, 255, 0.80)), blue;
 }
 
 .pokedex {
