--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -26,6 +26,10 @@
 	margin-top: 5rem;
 }
 
+.u-margin-regular {
+	margin: 5rem 0;
+}
+
 .u-absolute-position-center {
 	position: absolute;
 	transform: translate(-50%, -50%);
