--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -138,7 +138,8 @@
 	position: relative;
 	display: flex;
 	height: calc(100vh - 5rem);
-	flex-direction: column;
+	flex-flow: column nowrap;
+	justify-content: space-between;
 	background-color: $primary-color;
 	overflow: hidden;
 
@@ -155,87 +156,65 @@
 		text-align: center;
 		color: white;
 	}
-}
-
-.info {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: center;
-	margin: 2rem auto;
-	max-width: 100rem;
-	background-color: $primary-color;
+	&__members {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: space-evenly;
+		align-content: space-around;
+	}
 }
 
 .card {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 260px;
-	height: 260px;
-	margin: 0 15px;
+	height: 26rem;
+	perspective: 150rem;
+	-moz-perspective: 150rem;
 
-	&__container {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		text-align: center;
-		transition: transform 0.8s;
-		transform-style: preserve-3d;
-
-		&:hover {
-			transform: rotateY(180deg);
-		}
-	}
-
-	&__front {
+	&__side {
+		height: 26rem;
+		backface-visibility: visible;
 		position: absolute;
-		width: 100%;
-		height: 100%;
-		backface-visibility: hidden;
-		background-color: none;
+		top: 0;
+		left: 0;
+		background-color: $secondary-color;
+		transition: all 0.7s;
 
-		&--text {
-			width: 100%;
-			height: 23%;
-			font-size: 24px;
-			text-align: center;
-			color: white;
-			margin-top: 10px;
+		@include circle-mask;
+		&--front {
+			opacity: 1;
 		}
-	}
-
-	&__back {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-direction: column;
-		backface-visibility: hidden;
-		color: white;
-		margin: 0 15%;
-		height: 70%;
-		border-radius: 50%;
-		transform: rotateY(180deg);
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
-		background-color: rgba(85, 85, 85, 0.5);
-		background-image: url('/assets/img/pokeball-card.png');
-		opacity: 0.5;
-		background-repeat: no-repeat;
-		background-size: 35%;
-		background-position: 0 100%;
-
-		&--text {
-			display: inline-block;
-			font-size: 22px;
-			padding: 0.3em;
+		&--back {
+			transform: rotateY(180deg);
+			opacity: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 26rem;
 		}
 	}
 
 	&__image {
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
-		width: 70%;
-		height: auto;
-		border-radius: 50%;
+		height: 26rem;
+	}
+
+	&:hover &__side--front {
+		transform: rotateY(-180deg);
+		opacity: 0;
+	}
+
+	&:hover &__side--back {
+		transform: rotateY(0);
+		opacity: 1;
+	}
+
+	&__name {
+		font-size: 2.4rem;
+		text-align: center;
+		color: $color-white;
+	}
+
+	&__job {
+		font-size: 2.4rem;
+		color: $color-white;
 	}
 }
 
@@ -260,248 +239,3 @@
 		}
 	}
 }
-
-//   @media (max-width: 1024px) {
-//     .oak-professor {
-//       &__image {
-//         width: 100%;
-//         bottom: 50px;
-//         max-width: 150px;
-//         height: auto;
-//       }
-
-//       &__pokemon {
-//         max-width: 140px;
-//       }
-//     }
-
-//     .btn-landing {
-//       position: absolute;
-//       bottom: 50px;
-//       right: 60px;
-
-//       &__link {
-//         font-size: 14px;
-//       }
-//     }
-
-//     .title {
-//       font-size: 25px;
-//     }
-
-//     .functionalities {
-//       flex-flow: row wrap !important;
-//     }
-
-//     .explanation-card {
-//       &--double {
-//         flex: 2;
-//       }
-
-//       &__img-group {
-//         flex-flow: row nowrap;
-//         max-height: 240px !important;
-
-//         img {
-//           max-width: 160px !important;
-//         }
-//       }
-
-//       &__img {
-//         max-width: 160px !important;
-//       }
-//     }
-
-//     .main-bottom {
-//       box-sizing: border-box;
-//       justify-content: center;
-//       height: auto;
-//     }
-
-//     .card {
-//       width: 250px;
-//       height: 250px;
-
-//       &__front {
-//         &--text {
-//           font-size: 18px;
-//         }
-//       }
-
-//       &__back {
-//         &--text {
-//           font-size: 17px;
-//         }
-//       }
-//     }
-//   }
-
-//   @media (max-width: 768px) {
-//     .btn-landing {
-//       position: absolute;
-//       bottom: 50%;
-//     }
-
-//     .intro-section {}
-
-//     .title {
-//       font-size: 23px;
-//       margin-top: 1vh;
-//     }
-
-//     .pokedex-title {
-//       &__num {
-//         font-size: 18px !important;
-//       }
-
-//       &__text {
-//         font-size: 13px !important;
-//       }
-//     }
-
-//     .explanation-card {
-//       padding: 20px !important;
-
-//       &--double {
-//         padding: 20px !important;
-//         flex: 2;
-//       }
-//     }
-
-//     .bubble-text {
-//       font-size: 12px !important;
-//       padding: 15px !important;
-//     }
-
-//     .info {
-//       margin: 50px auto;
-//     }
-
-//     .card {
-//       &__front {
-//         &--text {
-//           font-size: 18px;
-//         }
-//       }
-
-//       &__back {
-//         &--text {
-//           font-size: 18px;
-//         }
-//       }
-//     }
-//   }
-
-//   @media screen and (max-width: 480px) {
-//     .oak-professor {
-//       position: absolute;
-//       left: 0;
-//       top: 50%;
-
-//       &__image {
-//         max-width: 99px;
-//         height: auto;
-//         position: static;
-//         display: block;
-//         margin: 0 auto;
-//       }
-
-//       &__pokemon {
-//         max-width: 100px;
-//         height: auto;
-//         position: absolute;
-//         display: block;
-//         margin: 0 auto;
-//       }
-//     }
-
-//     .btn-landing {
-//       position: static;
-//       width: 210px;
-//       display: block;
-//       margin: 20px auto;
-
-//       &__link {
-//         font-size: 14px;
-//         padding: 10px 20px;
-//       }
-
-//       .quote {
-//         &:before {
-//           left: -30px;
-//         }
-
-//         &:after {
-//           left: 10px;
-//         }
-//       }
-
-//       &:hover {
-//         .quote:before {
-//           left: 10px;
-//         }
-
-//         .quote:after {
-//           left: 35px;
-//         }
-//       }
-//     }
-
-//     .title {
-//       font-size: 18px !important;
-//       margin-top: 1vh !important;
-//     }
-
-//     .explanation-card {
-//       padding: 20px !important;
-
-//       &--double {
-//         padding: 20px !important;
-//         flex: 2;
-//       }
-
-//       &__img-group {
-//         flex-flow: row nowrap;
-
-//         img {
-//           max-width: 140px !important;
-//           max-height: 180px !important;
-//         }
-//       }
-
-//       &__img {
-//         max-width: 160px !important;
-//       }
-//     }
-
-//     .main-bottom {
-//       box-sizing: border-box;
-//       justify-content: center;
-//       height: auto;
-
-//       &__rights {
-//         font-size: 8px;
-//       }
-//     }
-
-//     .card {
-//       width: 220px !important;
-//       height: 220px !important;
-
-//       &__front {
-//         &--text {
-//           font-size: 15px;
-//         }
-//       }
-
-//       &__back {
-//         &--text {
-//           font-size: 14px;
-//         }
-//       }
-//     }
-
-//     .info {
-//       max-width: 400px;
-//     }
-//   }
