Refactorization of all landing page (not 100%  responsive yet)

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -11,7 +11,10 @@
 		</h1>
 	</div>
 
-	<app-button-arrow class="intro-section__btn-landing"></app-button-arrow>
+	<app-button-arrow
+		class="intro-section__btn-landing"
+		[text]="'Find your Pokemon'"
+	></app-button-arrow>
 
 	<img class="intro-section__pokemon" [src]="imgSource" alt="" />
 	<img
