--- a/src/app/shared/components/button-arrow/button-arrow.component.html
+++ b/src/app/shared/components/button-arrow/button-arrow.component.html
@@ -1,3 +1,3 @@
 <div class="button">
-	<a class="button__link"><span class="quote"></span>Find your Pokemon</a>
+	<a class="button__link"><span class="quote"></span>{{ text }}</a>
 </div>
