delete backgroundColor dynamic and add a normal background with linear-gradient, i've added a box-shadow which takes the values from a new variable called 'our-box-shadow'

--- a/src/app/components/pokedex/pokedex.component.html
+++ b/src/app/components/pokedex/pokedex.component.html
@@ -1,7 +1,4 @@
-<div
-	[ngStyle]="{ backgroundColor: getBackgroundColor() }"
-	class="component-box"
->
+<div class="component-box">
 	<div class="pokedex" *ngIf="status === 'loaded'">
 		<app-pokemon-list class="pokedex__pokemon-list"></app-pokemon-list>
 		<div class="pokedex__pokemon-detail">
