--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -10,3 +10,7 @@ $secundary-text-color: #494949;
 // Sizes
 
 $box-sizes: 80%; // is not being used
+
+// Box-shadow
+
+$our-box-shadow: 0 0 5px 3px #aaa;
