--- a/src/app/components/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokedex/pokemon-list/pokemon-list.component.scss
@@ -19,6 +19,7 @@
 	margin: 0 0 10px 0px;
 	font-size: 7rem;
 	font-weight: 700;
+	box-shadow: $our-box-shadow;
 
 	&__logo {
 		height: 40px;
@@ -44,6 +45,7 @@
 	background-color: #f0f0f0;
 	border-radius: 20px 20px 60px 20px;
 	padding: 25px;
+	box-shadow: $our-box-shadow;
 }
 
 .search-bar {
