--- a/src/app/shared/components/background-dex-style/background-dex-style.component.scss
+++ b/src/app/shared/components/background-dex-style/background-dex-style.component.scss
@@ -15,7 +15,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		font-size: 23px;
+		font-size: 2.3rem;
 
 		span {
 			color: white;
@@ -28,7 +28,7 @@
 		justify-content: center;
 		align-items: center;
 		color: white;
-		font-size: 16px;
-		padding: 0px 25px;
+		font-size: 1.8rem;
+		padding: 0px 2.5rem;
 	}
 }
