--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -40,22 +40,9 @@
 		<app-header-curve [text]="'How it works?'"></app-header-curve>
 	</div>
 	<div class="functionalities u-margin-top-regular">
-		<div class="explanation-card u-margin-bottom-big">
-			<app-background-dex-style
-				[num]="1"
-				[text]="'Search your Pokemon'"
-			></app-background-dex-style>
-			<div class="explanation-card__img">
-				<img src="assets/img/functionality-1.jpg" alt="" />
-			</div>
-			<div class="explanation-card__info ">
-				<div class="bubble-text">
-					You can select the first 151 Pokemons and search them by
-					name
-				</div>
-			</div>
-		</div>
-		<div class="explanation-card u-margin-bottom-big">
+		<div *ngFor="let func of functionalities"></div>
+		<app-card-functionality></app-card-functionality>
+		<!-- <div class="explanation-card u-margin-bottom-big">
 			<app-background-dex-style
 				[num]="2"
 				[text]="'Analyze your selected Pokemon'"
@@ -63,7 +50,6 @@
 
 			<div class="explanation-card__img">
 				<img src="assets/img/functionality-2_1.jpg" alt="" />
-				<img src="assets/img/functionality-2_2.jpg" alt="" />
 			</div>
 			<div class="explanation-card__info ">
 				<div class="bubble-text">
@@ -87,7 +73,7 @@
 					availables!
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </section>
 
