--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -56,7 +56,6 @@
 	overflow: hidden;
 	box-sizing: border-box;
 	height: 100vh;
-	z-index: -2;
 
 	&__heading {
 		position: relative;
@@ -74,31 +73,6 @@
 		display: flex;
 		flex-flow: row wrap;
 		justify-content: space-evenly;
-
-		.explanation-card {
-			//Esto debería ser un componente
-			display: flex;
-			flex-flow: column nowrap;
-			align-items: stretch;
-			justify-content: space-between;
-			height: 54rem;
-			max-width: 41rem;
-			background-color: #f0f0f0;
-			box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
-			padding: 4rem;
-			border-radius: 15px;
-
-			&__img {
-				display: flex;
-				flex-flow: row wrap;
-				justify-content: space-evenly;
-				align-self: center;
-				img {
-					border-radius: 15px;
-					max-height: 30rem;
-				}
-			}
-		}
 	}
 
 	&__wave {
@@ -170,6 +144,19 @@
 }
 
 @media (max-width: 1366px) {
+	.intro-section {
+		&__wave {
+			transform-origin: bottom;
+			transform: scaleY(1.4);
+		}
+	}
+
+	.section-functionality {
+		height: auto;
+	}
+}
+
+@media (max-width: 1024px) {
 	.intro-section {
 		&__wave {
 			transform-origin: bottom;
