--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -40,40 +40,14 @@
 		<app-header-curve [text]="'How it works?'"></app-header-curve>
 	</div>
 	<div class="functionalities u-margin-top-regular">
-		<div *ngFor="let func of functionalities"></div>
-		<app-card-functionality></app-card-functionality>
-		<!-- <div class="explanation-card u-margin-bottom-big">
-			<app-background-dex-style
-				[num]="2"
-				[text]="'Analyze your selected Pokemon'"
-			></app-background-dex-style>
-
-			<div class="explanation-card__img">
-				<img src="assets/img/functionality-2_1.jpg" alt="" />
-			</div>
-			<div class="explanation-card__info ">
-				<div class="bubble-text">
-					Just point the cursor on the card and you will see all the
-					data available: Name, ability, height, weight, types and
-					stats!
-				</div>
-			</div>
+		<div *ngFor="let func of functionalities">
+			<app-card-functionality
+				[num]="func.num"
+				[title]="func.title"
+				[img]="func.img"
+				[info]="func.info"
+			></app-card-functionality>
 		</div>
-		<div class="explanation-card u-margin-bottom-big">
-			<app-background-dex-style
-				[num]="3"
-				[text]="'And catch&#8217;em all!'"
-			></app-background-dex-style>
-			<div class="explanation-card__img">
-				<img src="assets/img/functionality-3.jpg" alt="" />
-			</div>
-			<div class="explanation-card__info">
-				<div class="bubble-text">
-					Explore the world around you and catch all the Pokemon
-					availables!
-				</div>
-			</div>
-		</div> -->
 	</div>
 </section>
 
