--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -1,5 +1,3 @@
-/* Flip Logic */
-
 .card-container {
 	display: flex;
 	flex-direction: column;
@@ -32,7 +30,6 @@
 .card {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	height: 100%;
 	border-radius: 2rem;
 	padding: 2rem;
@@ -45,7 +42,7 @@
 
 	&__btn {
 		align-self: flex-end;
-		margin-top: 2rem;
+		margin-top: auto;
 		border: 1px solid white;
 		border-radius: 1rem;
 		font-size: 1.5rem;
@@ -53,7 +50,7 @@
 		cursor: pointer;
 
 		&:hover {
-			backdrop-filter: saturate(60%);
+			background-color: rgba(255, 255, 255, 0.4);
 		}
 	}
 }
@@ -67,7 +64,6 @@
 	&__image {
 		background-color: white;
 		border-radius: 1rem;
-		width: 120%;
 	}
 
 	&__name {
@@ -91,187 +87,35 @@
 	}
 }
 
-// .card {
-// 	width: 100%;
-// 	height: 100%;
-// 	perspective: 1500px;
+.stats {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	background-color: rgba(255, 255, 255, 0.7);
+	color: black;
+	border-radius: 2rem;
+	margin-bottom: 2rem;
+	padding: 0.75rem;
 
-// 	&__inner {
-// 		position: relative;
-// 		text-align: center;
-// 		transition: transform 0.8s;
-// 		transform-style: preserve-3d;
-// 	}
+	&__properties {
+		padding: 1rem 0;
+	}
 
-// 	&__front {
-// 		position: absolute;
-// 		backface-visibility: hidden;
-// 		background-color: none;
-// 	}
-
-// 	&__front--bg {
-// 		height: calc(100% - 4rem);
-// 		border-radius: 2rem;
-
-// 		//Pokeball SVG background
-// 		background-image: url('/assets/img/pokeball-bg.svg');
-// 		background-repeat: no-repeat;
-// 		background-size: 150%; // Size pokeball bg
-// 		background-position: 0 100%; // Placed left bottom
-// 	}
-
-// 	&__front--data-bg {
-// 		height: calc(100% - 1rem);
-// 		border-radius: 2rem;
-// 		padding: 1rem 0 0 0;
-// 		background-color: #555555;
-// 	}
-
-// 	&__back {
-// 		position: absolute;
-// 		backface-visibility: hidden;
-// 		color: white;
-// 		transform: rotateY(180deg);
-// 	}
-
-// 	&__image {
-// 		margin-top: 1rem;
-// 		background-color: white;
-// 		height: 50%;
-// 		border-radius: 25%;
-// 	}
-
-// 	&__stats {
-// 		text-align: left;
-// 		border-radius: 2rem;
-// 		margin: 1rem;
-// 		display: inline-block;
-// 		background-color: #ffffff9f;
-// 		padding: 1rem;
-// 		width: calc(100% - 4rem);
-// 		height: calc(100% - 4rem);
-// 	}
-
-// 	&__table {
-// 		width: 100%;
-// 	}
-// }
-
-// /* END Fliplogic */
-
-// // Text General
-// .title {
-// 	font-size: 2em; //Pending general styles
-// 	font-weight: bold; //Pending general styles
-// 	color: black;
-// }
-
-// .subtitle {
-// 	color: white;
-// 	font-weight: bolder;
-// 	margin: 1rem 0 0.5rem 0;
-// 	font-size: 2em;
-// }
-
-// .text-color-primary {
-// 	color: black;
-// }
-
-// .cap {
-// 	text-transform: capitalize;
-// }
-
-// .ability {
-// 	color: black;
-
-// 	&__item {
-// 		margin: 0.2rem 0;
-// 	}
-// 	&__item--first {
-// 		margin: 0.2rem 0;
-// 	}
-// }
-
-// // Title Btn
-
-// .btn {
-// 	display: flex;
-// 	margin: 1rem 0;
-// 	align-items: center;
-// 	background-color: #ececec;
-// 	font-weight: bolder;
-// 	font-size: 1.5rem;
-// 	padding: 0.5rem;
-// 	border-radius: 1rem;
-// 	color: black;
-
-// 	&--first {
-// 		margin: 0 1rem 1rem 1rem;
-// 	}
-// }
-
-// // Pokemon Types
-// .type {
-// 	display: inline-block;
-// 	background-color: rgba(255, 255, 255, 0.363);
-// 	padding: 0.8rem;
-// 	margin: 0.2rem;
-// 	border-radius: 0.3em;
-// 	color: white;
-// }
-
-// // Icon Size on Titles
-// .icon-img {
-// 	width: 32px;
-// 	height: 32px;
-// }
-
-// //Skill Bar types
-// .progress-bar {
-// 	width: 100%;
-// 	padding: 5px;
-
-// 	&__skill {
-// 		border-radius: 0.5rem;
-// 	}
-// }
-// .d-hidden {
-// 	visibility: hidden;
-// }
-
-// // Loading Pokeball
-// .loading-pokeball {
-// 	display: block;
-// 	margin: 0 auto;
-// 	border-radius: 25px;
-// 	height: 40px;
-// }
-
-// //MEDIA
-
-// @media (max-height: 650px) {
-// 	.title {
-// 		font-size: 1em; //Pending general styles
-// 	}
-
-// 	.subtitle {
-// 		font-size: 1em;
-// 	}
-// }
-
-// @media (max-width: 768px) {
-// 	.card__front,
-// 	.card__back {
-// 		position: static;
-// 	}
-// 	.card__back {
-// 		backface-visibility: visible;
-// 		transform: none;
-// 	}
-// }
-
-// @media (min-width: 768px) {
-// 	.card:hover .card__inner {
-// 		transform: rotateY(180deg);
-// 	}
-// }
+	&__chart {
+		display: flex;
+		justify-content: space-between;
+	}
+	&__chart-name {
+		font-size: 1.5rem;
+	}
+	&__chart-bar {
+		display: flex;
+		align-items: center;
+		div {
+			font-size: 1.2rem;
+		}
+		svg {
+			margin-left: 1rem;
+		}
+	}
+}
