checking if the new component works: fine!

--- a/src/app/shared/components/back-top-btn/back-top-btn.component.html
+++ b/src/app/shared/components/back-top-btn/back-top-btn.component.html
@@ -1,1 +1,8 @@
-<p>back-top-btn works!</p>
+<div class="btn">
+	<img
+		class="btn__img"
+		src="../../../../assets/img/svg/angle-up-solid.svg"
+		alt="back-top-arrow"
+	/>
+	<p>Btn works</p>
+</div>
