--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -94,6 +94,10 @@ body {
 	overflow-x: hidden;
 }
 
+// *{
+//     outline: 1px solid red;
+//    }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
