added the new component to the landing test

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -112,3 +112,6 @@
 		projects below us. All rights are reserved to The Pokemon Company
 	</p>
 </section>
+
+<!-- Back top btn -->
+<app-back-top-btn></app-back-top-btn>
