--- a/src/app/components/pokedex/pokedex.component.html
+++ b/src/app/components/pokedex/pokedex.component.html
@@ -19,6 +19,7 @@
 			alt="Some problem with the API"
 		/>
 	</div>
-
-	<app-back-top-btn></app-back-top-btn>
 </div>
+
+<!-- Back top btn -->
+<app-back-top-btn></app-back-top-btn>
