--- a/src/app/shared/components/back-top-btn/back-top-btn.component.scss
+++ b/src/app/shared/components/back-top-btn/back-top-btn.component.scss
@@ -1,9 +1,37 @@
+@import 'base/base';
+@import 'base/typography';
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
+
 .btn {
+	@include elem-size(5rem, 5rem);
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: red;
+	background-color: $secondary-color;
+	border-radius: 10px;
+	opacity: 0.5;
+	position: absolute;
+	z-index: 10;
+	bottom: 3rem;
+	right: 3rem;
 
 	&__img {
+		display: flex;
+		max-width: 80%;
+	}
+}
+
+@media (max-width: 1024px) {
+	.btn {
+	}
+}
+@media (max-width: 768px) {
+}
+@media (max-width: 480px) {
+	.btn {
+		@include elem-size(4rem, 4rem);
+		bottom: 2rem;
+		right: 2rem;
 	}
 }
