--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -15,3 +15,10 @@
 	-webkit-clip-path: circle(50% at 50% 50%);
 	clip-path: circle(50% at 50% 50%);
 }
+
+// Elem-size
+
+@mixin elem-size($width, $height) {
+	width: $width;
+	height: $height;
+}
