--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="pokemonSelected != undefined" class="card-container">
+<div class="card-container">
 	<div class="card-container__title">
 		<img src="/assets/img/iconPokeData.svg" alt="Icon Map" />
 		<h2>
