the back-top-button returns to the top of the page

--- a/src/app/shared/components/back-top-btn/back-top-btn.component.html
+++ b/src/app/shared/components/back-top-btn/back-top-btn.component.html
@@ -1,7 +1,12 @@
-<div class="btn">
+<div
+	(click)="renderScrollPosition()"
+	[ngClass]="{ displayBtn: scrollPosition > 300 }"
+	class="btn"
+>
 	<img
 		class="btn__img"
 		src="../../../../assets/img/svg/angle-up-solid.svg"
 		alt="back-top-arrow"
 	/>
+	<p></p>
 </div>
