--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,4 +1,14 @@
 <main class="intro-section">
+	<div class="intro-section__wave">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+			<path
+				fill="#273036"
+				fill-opacity="1"
+				d="M0,64L60,85.3C120,107,240,149,360,176C480,203,600,213,720,186.7C840,160,960,96,1080,69.3C1200,43,1320,53,1380,58.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+			></path>
+		</svg>
+	</div>
+
 	<div class="intro-section__headings">
 		<h1 class="heading-primary heading-primary--black u-text-left">
 			Discover
@@ -11,26 +21,16 @@
 		</h1>
 	</div>
 
+	<div class="intro-section__characters">
+		<app-characters-animation
+			[imgSource]="imgSource"
+		></app-characters-animation>
+	</div>
+
 	<app-button-arrow
 		class="intro-section__btn-landing"
 		[text]="'Find your Pokemon'"
 	></app-button-arrow>
-
-	<img class="intro-section__pokemon" [src]="imgSource" alt="" />
-	<img
-		class="intro-section__professor-oak"
-		src="../../assets/img/pokemon-prof.png"
-	/>
-
-	<div class="intro-section__wave">
-		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-			<path
-				fill="#273036"
-				fill-opacity="1"
-				d="M0,64L60,85.3C120,107,240,149,360,176C480,203,600,213,720,186.7C840,160,960,96,1080,69.3C1200,43,1320,53,1380,58.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
-			></path>
-		</svg>
-	</div>
 </main>
 
 <!-- SECOND SECTION -->
