Add responsiveness refactorization to landing

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -58,7 +58,7 @@
 		<app-header-curve [text]="'Our Team'"></app-header-curve>
 	</div>
 
-	<div class="section-team__members">
+	<div class="section-team__members u-margin-top-regular">
 		<div *ngFor="let person of team">
 			<app-card-member
 				[name]="person.name"
