--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -150,6 +150,10 @@
 	.section-functionality {
 		height: auto;
 	}
+
+	.section-team {
+		height: auto;
+	}
 }
 
 @media (max-width: 1024px) {
@@ -163,6 +167,7 @@
 
 @media (max-width: 780px) {
 	.intro-section {
+		height: auto;
 		display: flex;
 		flex-flow: column nowrap;
 		justify-content: space-evenly;
