WIP: the button works but it must disappear

--- a/src/app/shared/components/back-top-btn/back-top-btn.component.html
+++ b/src/app/shared/components/back-top-btn/back-top-btn.component.html
@@ -1,8 +1,4 @@
-<div
-	(click)="renderScrollPosition()"
-	[ngClass]="{ displayBtn: scrollPosition > 300 }"
-	class="btn"
->
+<div (click)="backToTop()" class="btn">
 	<img
 		class="btn__img"
 		src="../../../../assets/img/svg/angle-up-solid.svg"
