Add svg separators and style to titles of header curve component

--- a/src/app/shared/components/header-curve/header-curve.component.html
+++ b/src/app/shared/components/header-curve/header-curve.component.html
@@ -1,13 +1,22 @@
 <div>
-	<svg class="wave" viewBox="0 0 1599 126" xmlns="http://www.w3.org/2000/svg">
-		<path
-			d="M0 100.937V0H1599V75.5C1151.5 134.5 736.806 144.614 312.5 86C149.091 63.4266 25.7633 73.8967 0 100.937Z"
-			fill="#273036"
-		/>
+	<svg class="header-gap">
+		<rect x="0" y="0" width="100%" height="100%" fill="#273036" />
 	</svg>
-	<div class="u-text-center u-absolute-position-center">
-		<h2 class="heading-secondary">
-			{{ text }}
-		</h2>
+	<div>
+		<svg
+			class="wave"
+			viewBox="0 0 1599 126"
+			xmlns="http://www.w3.org/2000/svg"
+		>
+			<path
+				d="M0 100.937V0H1599V75.5C1151.5 134.5 736.806 144.614 312.5 86C149.091 63.4266 25.7633 73.8967 0 100.937Z"
+				fill="#273036"
+			/>
+		</svg>
+		<div class="u-text-center u-absolute-position-center u-border-style">
+			<h2 class="heading-secondary">
+				{{ text }}
+			</h2>
+		</div>
 	</div>
 </div>
