--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -49,6 +49,15 @@
 			></app-card-functionality>
 		</div>
 	</div>
+	<div class="section-functionality__wave">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+			<path
+				fill="#273036"
+				fill-opacity="1"
+				d="M0,64L60,85.3C120,107,240,149,360,176C480,203,600,213,720,186.7C840,160,960,96,1080,69.3C1200,43,1320,53,1380,58.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+			></path>
+		</svg>
+	</div>
 </section>
 
 <!-- THIRD SECTION -->
