--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -51,7 +51,6 @@
 	position: relative;
 	overflow: hidden;
 	box-sizing: border-box;
-	height: 100vh;
 
 	&__heading {
 		position: relative;
@@ -72,19 +71,11 @@
 	}
 
 	&__wave {
-		position: absolute;
-		z-index: -1;
-		transition: all 0.5s;
-		width: 100%;
-		height: auto;
+		bottom: 0;
 
-		&--top {
-			top: 0;
-			left: 0;
-		}
-		&--bottom {
-			bottom: 0;
-			left: 0;
+		svg {
+			display: block;
+			width: 100%;
 		}
 	}
 
