--- a/src/app/shared/components/header-curve/header-curve.component.scss
+++ b/src/app/shared/components/header-curve/header-curve.component.scss
@@ -1,3 +1,8 @@
+.header-gap {
+	width: 100%;
+	height: 3rem;
+	display: block;
+}
 .wave {
 	transition: transform 0.7s;
 }
@@ -11,5 +16,8 @@
 	.wave {
 		transform-origin: top;
 		transform: scaleY(1.7);
+	}
+	.header-gap {
+		height: 8rem;
 	}
 }
