--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -10,6 +10,10 @@ body {
 	box-sizing: border-box;
 }
 
+// svg{
+//     display: block;
+// }
+
 .main-page {
 	display: flex;
 	flex-direction: column;
