Pokemon list has now an anchor to pokemon-card in order to a better UX for mobile devices

--- a/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -2,7 +2,10 @@
 	<div class="detail-container__selected" *ngIf="pokemonSelected">
 		<div class="panel">
 			<div class="panel__card">
-				<app-pokemon-card class="panel__info__card"></app-pokemon-card>
+				<app-pokemon-card
+					class="panel__info__card"
+					id="card"
+				></app-pokemon-card>
 			</div>
 			<div class="panel__map">
 				<app-pokemon-map class="panel__info__map"></app-pokemon-map>
