--- a/src/app/components/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokedex/pokemon-list/pokemon-list.component.html
@@ -27,7 +27,7 @@
 					let elem of pokemonList | searcherFilter: searchPokemonName;
 					index as i
 				"
-				routerLink="./{{ elem.name }}"
+				(click)="renderPokemon(elem.name)"
 			>
 				<span class="elem__id">{{ elem.id }}</span>
 				<div class="elem__info">
