back-top-btn works correctly. Also hide when is on the top

--- a/src/app/shared/components/back-top-btn/back-top-btn.component.html
+++ b/src/app/shared/components/back-top-btn/back-top-btn.component.html
@@ -1,8 +1,9 @@
-<div (click)="backToTop()" class="btn">
-	<img
-		class="btn__img"
-		src="../../../../assets/img/svg/angle-up-solid.svg"
-		alt="back-top-arrow"
-	/>
-	<p></p>
+<div class="btn-container" (window:scroll)="hideBtn()">
+	<div (click)="backToTop()" class="btn" *ngIf="topPosition === false">
+		<img
+			class="btn__img"
+			src="../../../../assets/img/svg/angle-up-solid.svg"
+			alt="back-top-arrow"
+		/>
+	</div>
 </div>
