--- a/src/app/shared/components/back-top-btn/back-top-btn.component.scss
+++ b/src/app/shared/components/back-top-btn/back-top-btn.component.scss
@@ -11,7 +11,7 @@
 	background-color: $secondary-color;
 	border-radius: 10px;
 	opacity: 0.3;
-	position: absolute;
+	position: fixed;
 	z-index: 10;
 	bottom: 3rem;
 	right: 3rem;
