--- a/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -38,12 +38,14 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	perspective: 1500px;
 	&__img {
 		width: 50%;
 		animation: rotate 3s cubic-bezier(0.68, -0.55, 0.27, 1.55) 1s infinite
 			normal;
 		padding: 2rem;
 		opacity: 0.8;
+		filter: grayscale(100%);
 	}
 	&__title {
 		text-align: center;
