--- a/src/app/components/pokedex/pokedex.component.scss
+++ b/src/app/components/pokedex/pokedex.component.scss
@@ -11,6 +11,7 @@
 			rgba(255, 255, 255, 0.8)
 		),
 		url('https://c.wallhere.com/photos/02/08/Pok_mon_tile_cartoon_pattern-1558653.jpg!d');
+	background-size: cover;
 }
 
 .pokedex {
